<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diary.AddDiaryActivity">

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="726dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help2"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cancelDialog2"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:onClick="onHelpClick"
                android:text="@string/help"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="429dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/todayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDateClick"
                android:text="placeholder"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tn"
                android:spinnerMode="dialog"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onQ2"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onQ3"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/q41"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/hint"
                android:textSize="24sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onQ5"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tn"
                android:spinnerMode="dialog"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onQ7"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/q8a"
                android:scrollbarSize="20dp"
                android:spinnerMode="dialog"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/q91"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/hint"
                android:textSize="24sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/q9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/cancelDialog3"
                android:layout_width="300dp"
                android:layout_height="59dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:onClick="onAddClick"
                android:text="@string/add"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="429dp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>